--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -30,6 +30,8 @@
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
